fix letter-spacing

--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,7 @@ a {
   text-align: center;
   position: relative;
   top: -26px;
+  letter-spacing: .1em;
 }
 
 .concept-text {
